Bug fix
- Fixed an issue where the initial white screen won't cover the entire page at certain screen size

--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,8 @@ html,body{
 	background-color: rgb(255,255,255);
 	position: absolute;
 	min-width: 100%;
-	min-height: 100%;
+	min-height: 35rem;
+	height: 100%;
 	overflow: hidden;
 }
 
@@ -1062,11 +1063,6 @@ html,body{
 
 }
 
-@media only screen and (max-height: 35rem) {
-	#initial-screen{
-		min-height: 35rem;
-	}
-}
 
 @media only screen and (max-width: 768px) and (max-height: 620px) {
 	html,body{
